--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "license": "ISC",
   "devDependencies": {
     "clean-css": "^3.4.9",
+    "edp-provider-rider": "^2.0.0",
     "yargs": "^3.31.0"
   }
 }
